# OpenContractRx

./: .env.example  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  docker-compose.yml  repo_tree.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml
apps/api/: Dockerfile  Dockerfile.test  README.md  pyproject.toml
apps/api/src/opencontractrx_api/: main.py
apps/api/src/opencontractrx_api/core/: config.py  integrations.py  logging.py  secrets.py  security.py
apps/api/src/opencontractrx_api/db/: deps.py  models.py  session.py
apps/api/src/opencontractrx_api/routers/: auth.py  contracts.py  health.py  integrations.py
apps/api/tests/: test_contracts.py  test_integrations.py
apps/web/: Dockerfile  README.md  package-lock.json  package.json
apps/web/app/: layout.tsx  page.tsx
apps/web/app/contracts/: page.tsx
apps/web/app/integrations/: page.tsx
apps/web/styles/: globals.css
apps/worker/: Dockerfile  README.md  pyproject.toml
apps/worker/src/opencontractrx_worker/: celery_app.py
apps/worker/src/opencontractrx_worker/tasks/: ingest.py
