[project]
name = "opencontractrx-worker"
version = "0.1.0"
description = "OpenContractRx worker (Celery)"
requires-python = ">=3.12"
dependencies = [
  "celery>=5.4.0",
  "redis>=5.0.0",
  "pydantic>=2.8.0",
  "pydantic-settings>=2.4.0",
  "sqlalchemy>=2.0.30",
  "psycopg[binary]>=3.2.0",
  "boto3>=1.34.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]